[package]
name = "channel_io"
authors = ["Seth Stadick"]
version = "0.1.3"
edition = "2018"
license = "Unlicense/MIT"
readme = "README.md"
documentation = "https://docs.rs/channel_io"
homepage = "https://github.com/sstadick/channel_io"
repository = "https://github.com/sstadick/channel_io"
categories = ["asynchronous", "concurrency"]
keywords = ["channel", "reader"]
description = "Reader implementation on channel of bytes"

[dependencies]
bytes = "1"
flume = "0.10"
